test/good/functions/nested05.px

func f(s: String) def
    func g1(): String def
        return s

    func g2(): String def
        return g1() * 2

    print g2()

f("abc")
