test/bad/generators/in01.px

func* f(): String def
    return

0 in f()
